style.css
/**********Font********/

@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,500&display=swap');

/*----------------------------
            Common Style
------------------------------*/

body {
    font-family: font-family: 'Poppins', sans-serif;
    ;
    margin: 0;
}


/*----------------------------
Style For Desktop & Laptop. Width > 1024px
------------------------------*/


/*----------------------------
            Header Style
------------------------------*/

.starting {
    background-color: #2D25A0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 677px;
    width: 100%;
    padding-left: 20px;
}

.title {
    width: 485px;
}

.head-title {
    font-size: 64px;
    color: #ffffff;
    transition: transform 2s;
}

.title a {
    color: white;
    text-decoration: none;
    background-color: #E02C6D;
    font-size: 16px;
    padding: 10px 24px;
}

.fa-arrow-right {
    padding-left: 8px;
}

.title-img img {
    width: 556px;
    height: 400px;
    margin-left: 102px;
    transition: transform 3s ease;
}


/*----------------------------
    Header Hover animation 
------------------------------*/

.title-img img:hover {
    transform: scale(1.2) skew(20deg) rotate(360deg);
}

.head-title:hover {
    transform: scale(1.4) translate(-20%, -20%);
}


/*----------------------------
    Player Blog stylesheet
------------------------------*/

.players {
    display: flex;
    justify-content: center;
}

.player-list {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    column-gap: 40px;
    align-items: center;
}

.player {
    width: 330px;
    height: 474px;
    padding: 15px;
    margin-top: 70px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
    border-radius: 10px;
}

.player img {
    width: 300px;
    height: 256px;
}

.player-name {
    font-size: 28px;
    color: #18191F;
    margin-top: 16px;
    margin-bottom: 0px;
}

.player-info {
    font-size: 16px;
    color: #6C6C6C;
    margin-top: 10px;
    text-align: justify;
}


/*----------------------------
    Highlights Part
------------------------------*/

.highlights {
    display: flex;
    align-items: center;
    width: 70%;
    margin-left: 20%;
    margin-top: 165px;
    position: relative;
}

.text-part {
    width: 40%;
    height: 350px;
    border-radius: 10px;
    transition: 2s ease;
    padding-left: 1%;
}

.text-part:hover {
    background-color: rgba(240, 230, 140, 0.541);
    transform: translate(-10%, 00%);
}

.text-part:hover a {
    color: white;
    text-decoration: none;
    background-color: royalblue;
    font-size: 18px;
    padding: 10px 24px;
    transform: translate(50%);
}

.text-part h1 {
    font-size: 48px;
    margin-bottom: 0;
}

.text-part p {
    font-size: 16px;
    padding-bottom: 30px;
    color: #6C6C6C;
}

.text-part a {
    color: white;
    text-decoration: none;
    background-color: #E02C6D;
    font-size: 16px;
    padding: 10px 24px;
    transition: 2s ease;
}

.highlights-img img {
    display: none;
    width: 567px;
    height: 427px;
    margin-left: 66px;
}

.responsive-iframe {
    position: absolute;
    top: 20px;
    padding-left: 50px;
    bottom: 40px;
    width: 45%;
    height: 90%;
    border: none;
}


/*----------------------------
    Animation Bouncing Ball
------------------------------*/

@keyframes bouncing {
    0% {
        top: 0px;
        left: 0px;
        transform: rotate(00deg);
    }
    10% {
        top: 130px;
        left: 20%;
        transform: rotate(400deg);
    }
    20% {
        top: 0px;
        left: 40%;
        transform: rotate(000deg);
    }
    30% {
        top: 130px;
        left: 60%;
        transform: rotate(400deg);
    }
    40% {
        top: 0px;
        left: 80%;
        transform: rotate(000deg);
    }
    50% {
        top: 130px;
        left: 95%;
        transform: rotate(400deg);
    }
    60% {
        top: 0px;
        left: 80%;
        transform: rotate(00deg);
    }
    70% {
        top: 130px;
        left: 60%;
        transform: rotate(400deg);
    }
    80% {
        top: 0px;
        left: 40%;
        transform: rotate(00deg);
    }
    90% {
        top: 130px;
        left: 20%;
        transform: rotate(400deg);
    }
    100% {
        top: 0px;
        left: 0px;
        transform: rotate(00deg);
    }
}

.bouncing-ball {
    width: 62%;
    height: 200px;
    margin-top: 50px;
    margin-left: 20%;
}

.ball img {
    position: relative;
    width: 100px;
    height: 100px;
    animation: bouncing 10s linear 0s infinite alternate;
    animation-play-state: running;
}


/*----------------------------
    Footer Part
------------------------------*/

footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 90%;
    margin-top: 100px;
}

.last {
    width: 483px;
    height: 213px;
}

.football-img img {
    width: 483px;
    height: 110px;
}

.icons {
    text-align: center;
}

.icons a {
    color: #969BAB;
    font-size: 32px;
    margin-left: 15px;
}

.copyright {
    font-size: 18px;
    text-align: center;
}


/*------------------------------------------------
 Responsive    For Small Devices. (Width < 688px)
----------------------------------------------------*/

@media only screen and (max-width:688px) {
    /*----------------------------
 Header Responsive For phone
------------------------------*/
    .starting {
        width: 100%;
        flex-direction: column;
        height: 677px;
        padding-left: 0px;
    }
    .title {
        width: 70%;
        margin-top: 110px;
    }
    .head-title {
        font-size: 30px;
        margin-bottom: 30px;
        transition: transform 3s linear;
    }
    .title-img img {
        width: 250px;
        height: 200px;
        margin-left: 50px;
        margin-right: 50px;
        margin-top: 50px;
        align-items: center;
        transition: transform 3s linear;
    }
    .title-img img:hover {
        transform: translate(20%, 20%) scale(.7);
    }
    .head-title:hover {
        transform: translate(-10%, 10%) scale(0.7);
    }
    /*----------------------------
 Players Responsive For Phone
------------------------------*/
    .players {
        flex-direction: column;
        margin-left: 15px;
        align-items: center;
    }
    .player {
        width: 280px;
        height: 520px;
        margin-top: 24px;
        padding: 15px;
        border: none;
        border-radius: 10px;
        box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
    }
    .player-list {
        grid-template-columns: repeat(1, 1fr);
    }
    .player img {
        width: 280px;
        height: 256px;
    }
    /*----------------------------
highlights For Phone
------------------------------*/
    .highlights {
        flex-direction: column;
        align-items: center;
        width: 80%;
        margin-left: 0%;
        margin-top: 60px;
    }
    .text-part {
        width: 100%;
        height: 350px;
        margin-left: 50px;
    }
    .text-part h1 {
        font-size: 30px;
    }
    .text-part p {
        padding-bottom: 30px;
        text-align: justify;
    }
    .text-part:hover {
        background-color: LavenderBlush;
        transform: translate(0%, -10%);
    }
    .highlights-img img {
        width: 100%;
        height: 248px;
        margin-top: 4%;
        padding-right: 130px;
        margin-left: 25px;
        display: block;
    }
    .responsive-iframe {
        display: none;
    }
    /*----------------------------
Bouncing Ball for phone
------------------------------*/
    .bouncing-ball {
        width: 80%;
        margin-left: 5%;
    }
    .ball img {
        width: 50px;
        height: 50px;
    }
    /*----------------------------
 Footer Responsive For Phone
------------------------------*/
    footer {
        width: 100%;
        margin-top: 55px;
    }
    .last {
        width: 483px;
        height: 213px;
        align-items: center;
    }
    .football-img img {
        width: 275px;
        height: 63px;
        margin-left: 80px;
        margin-bottom: 30px;
    }
}


/*--------------------------------------------
 Responsive For Tab and Ipad. (688<width<1026)
---------------------------------------------*/

@media only screen and (min-width:688px) and (max-width:1025px) {
    /*----------------------------
 HeaderResponsive For Tab and Ipad
------------------------------*/
    .starting {
        flex-direction: column;
        height: 677px;
        width: 100%;
        padding-left: 50px;
    }
    .title {
        width: 100%;
        margin-top: 110px;
    }
    .head-title {
        font-size: 36px;
        margin-bottom: 30px;
        transition: transform 2s;
    }
    .fa-arrow-right {
        padding-left: 8px;
    }
    .title-img img {
        width: 380px;
        height: 300px;
        margin-left: 0px;
        margin-right: 50px;
        margin-top: 50px;
        align-items: center;
        transition: transform 3s ease-in-out;
    }
    .title-img img:hover {
        transform: rotate(360deg);
    }
    .head-title:hover {
        transform: scale(1.2) translate(5%, -15%);
    }
    /*----------------------------
 Players Responsive For Tab and Ipad
------------------------------*/
    .players {
        flex-direction: column;
        align-items: center;
    }
    .player {
        width: 270px;
        height: 500px;
        margin-top: 24px;
        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
    }
    .player-list {
        grid-template-columns: repeat(2, 1fr);
        column-gap: 20px;
    }
    .player img {
        width: 270px;
        height: 256px;
    }
    /*----------------------------
Highlights Responsive For Tab and Ipad
------------------------------*/
    .highlights {
        flex-direction: column;
        align-items: center;
        width: 100%;
        margin-left: 0%;
        margin-top: 60px;
    }
    .text-part {
        width: 65%;
        padding-right: 50px;
        height: 280px;
    }
    .text-part:hover {
        background-color: Lavender;
        transform: translate(0%, -10%);
    }
    .text-part h1 {
        font-size: 30px;
    }
    .text-part p {
        padding-bottom: 30px;
        text-align: justify;
    }
    .highlights-img img {
        width: 450px;
        height: 300px;
        margin-top: 00px;
        padding-right: 150px;
        display: block;
    }
    .responsive-iframe {
        display: none;
    }
    /*----------------------------
Bouncing Ball for phone
------------------------------*/
    .bouncing-ball {
        width: 70%;
        margin-left: 10%;
    }
    .ball img {
        width: 70px;
        height: 70px;
    }
    /*----------------------------
Footer Responsive For Tab and Ipad
------------------------------*/
    footer {
        width: 100%;
        margin-top: 55px;
    }
    .football-img img {
        width: 355px;
        height: 93px;
        margin-left: 80px;
        margin-bottom: 30px;
    }
}

